# V18

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  conftest.py  launch_app.py  mock_assets.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
.harness/: team.yaml
.omo/run-continuation/: ses_14ff8060effe47nvLDCifM57kS.json  ses_150b03d04ffefj4WfwN5nV5HaK.json  ses_1536a07f6ffewvpI2U6r2B0wfE.json  ses_153aab279ffeTULYmL2hXkrzDS.json  ses_153ee71c6ffeDhpgv2Wswn7QCM.json  ses_154f532faffeqRLFdbI7p2soz3.json
app/: main_window.py  style_constants.py  widgets.py  worker.py
app/pages/: __init__.py  audit_page.py  case_detail_page.py  case_list_page.py  home_page.py  settings_page.py
app/widgets/: __init__.py  ai_status_card.py  api_tutorial_dialog.py  empty_state.py  identity_goal_grid.py  logo.py  minimax_card.py  notice.py  option_card.py  page_header.py  progress_timeline.py  result_card.py  settings_page.py  status_badge.py  upload_card.py
core/: __init__.py  __main__.py  ai_client.py  ai_config.py  ai_mode.py  audit_store.py  checkpoint_builder.py  distiller.py  error_reporter.py  extract.py  fact_card.py  intake.py  runner.py  scenario_router.py  settings_store.py  task_store.py  text_utils.py
core/ai/: __init__.py  ai_manifest.py  deepseek_client.py  mimo_client.py  multimodal.py  multimodal_router.py  provider_registry.py  unified_client.py
core/contracts/: __init__.py  ai_provider.py  quality_gate.py  renderer.py  scenario.py  workflow_stage.py
core/pipeline/: __init__.py  schemas.py  step1_intake.py  step2_extract.py  step3_fact_api_a.py  step3_fact_extract.py  step4_strategy_api_b.py  step4_strategy_reasoning.py  step5_distill.py  step6_llm_generate.py  step6_template_fill.py  step7_postprocess.py  step7_render.py  step7_render_manifest.py  step8_quality_gate.py
core/providers/: api_a_client.py  api_b_client.py
core/quality/: defense_quality_gate.py  final_artifact_auditor.py  package_leak_scanner.py  pipeline_gates.py  visible_docx_checker.py
core/render/: docx_renderer.py  pdf_converter.py  xlsx_renderer.py  zip_builder.py
core/scenario/: __init__.py  defense_scenario.py  scenario_registry.py
core/workflow/: __init__.py  dual_ai_orchestrator.py  events.py  stages.py
docs/: LOGO_SWAP.md  sla.md
docs/customer-guide/: ACTIVATION.md  FIRST_CASE.md  README.md  TROUBLESHOOTING.md
docs/landing/: index.html
docs/legal/: DATA_PROCESSING_AGREEMENT.md  NDA.md  TERMS_OF_SERVICE.md
fixtures/: sample_case.txt
prompts/: api_a_fact_extract.txt  api_b_strategy_writer.txt  distill_final_context.txt
scripts/: _debug_pipeline.py  _debug_tasks.py  _test_full_pipeline.py  _test_ocr.py  accept_v18_delivery.py  analyze_pdf.py  analyze_test_pdf.py  capture_v18_ui_screenshot.py  check_all_docs.py  check_doc_quality.py  check_v2_defense.py  debug_card_tree.py  debug_case_type.py  demo_pipeline.py  extract_v3.py  fix_issues.py  rerender.py  run_v18_rc_golden_defense.ps1  run_v18_rc_golden_defense.py  run_v18_ui_analysis.py  scan_repo.py  screenshot_v18.py  see_image.py  show_case1_docs.py  smoke_new_widgets.py  smoke_settings_page.py  smoke_v18_cli_real_case.py  smoke_v18_desktop_start.py  smoke_v18_ui_pid.py  smoke_v18_ui_real_start.py  start_v18.bat  verify_harness.py  verify_pdf.py
scripts/_legacy_root/: README.md  audit_chengying_v2.py  check_ai_cfg.py  check_api.py  check_case_id.py  check_chinese.py  (+22 more)
templates/: action_advice.yaml  administrative_review_template.yaml  common_case_assessment.yaml  complaint_template.yaml  defense_template.yaml  evidence_catalog.yaml  evidence整理_template.yaml  lawsuit_template.yaml
tests/: test_acceptance_calls_defense_gate.py  test_defense_doc_not_generic.py  test_error_reporter.py  test_expected_file_list_v18_rc.py  test_fact_card.py  test_golden_case_passes_defense_gate.py  test_golden_script_runs.py  test_no_forbidden_text_in_customer_docs.py  test_pipeline.py  test_pipeline_exit_nonzero_on_quality_fail.py  test_quality_gate_no_false_pass.py  test_renderers.py  test_tdd_ai_clients.py  test_tdd_ai_http.py  test_tdd_ai_schemas.py  test_tdd_api_mock.py  test_tdd_boundary.py  test_tdd_deep.py  test_tdd_defense_gate.py  test_tdd_distiller.py  test_tdd_extract.py  test_tdd_fact_card.py  test_tdd_identities.py  test_tdd_intake.py  test_tdd_manifest_deep.py  test_tdd_multimodal_router.py  test_tdd_pdf_converter.py  test_tdd_pipeline.py  test_tdd_pipeline_orchestrator.py  test_tdd_pipeline_steps.py  test_tdd_providers_quality.py  test_tdd_quality_stores.py  test_tdd_remaining.py  test_tdd_render.py  test_tdd_runner.py  test_tdd_scenario.py  test_tdd_scenario_router.py  test_tdd_settings_audit.py  test_tdd_smoke.py  test_tdd_step2_step5.py  (+3 more)
(+9 files in other folders)
